# merge-python-client

./: .fernignore  .gitignore  .stats.yml  LICENSE.md  README.md  api.md  changelog.md  pyproject.toml  reference.md  test_sprint.py
.fern/: metadata.json
.github/workflows/: ci.yml  publish.yml  semgrep.yml  tests.yml
.mock/: accounting_v3.yml  ats_v3.yml  crm_v3.yml  fern.config.json  filestorage_v3.yml  hris_v3.yml  ticketing_v3.yml
.mock/definition/: api.yml
.mock/definition/ATS/: eeocs.yml  (+33 more)
e2e_test/: mock_server.py  sample_app.py
src/merge/: __init__.py  _client.py  _resource.py  _types.py  _version.py  client.py  environment.py  pagination.py  version.py
tests/: test_ci_ats.py  test_ci_hris.py  test_client.py  test_deepcopy.py  test_extract_files.py  test_models.py  test_qs.py  test_required_args.py  test_transform.py  utils.py
tests/api_resources/: test_accounting.py  test_ats.py  test_crm.py  test_file_storage.py  test_hris.py  test_marketing.py  test_ticketing.py
tests/custom/: test_datetime_filters.py  test_enum_forward_compat_query.py  test_enum_forward_compat_response.py  test_environment_routing.py  test_error_response_handling.py  test_expand_url_format.py  test_query_encoder_edges.py
tests/functional/: test_ci_ats.py  test_ci_hris.py
tests/integration/: test_accounting.py  test_calendar.py  test_chat.py  test_crm.py  test_email.py  test_filestorage.py  test_hris.py  test_knowledgebase.py  test_ticketing.py
tests/remediation/: conftest.py  test_agent.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
(+4453 files in other folders)
