[tool.poetry]
name = "MergePythonClient"
version = "0.2.0"
description = "Client library for the merge API"
readme = "README.md"
authors = ["Merge <hello@merge.dev>"]
license = "custom"
repository = "https://github.com/merge-api/merge-python-client"
packages = [
    { include = "merge", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "0.23.3"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
mypy = "0.971"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"