[tool.poetry]
name = "MergePythonClient"
version = "0.2.10"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "merge", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = ">=0.21.2"
pydantic = ">= 1.9.2, < 3"

[tool.poetry.dev-dependencies]
mypy = "0.971"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
