[tool.poetry]
name = "MergePythonClient"
version = "1.0.5"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "merge", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.21.2"
pydantic = "^2.6.0"

[tool.poetry.dev-dependencies]
mypy = "0.971"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
